--- a/Front-end/la-bergerie-des-reptiles.css
+++ b/Front-end/la-bergerie-des-reptiles.css
@@ -20,7 +20,7 @@ header {
     z-index: 100;
 }
 header a {
-    color: #000;
+    color: #fff;
     margin-right: 40px;
 }
 /* carousel */
@@ -51,7 +51,7 @@ header a {
     transform: translateX(-50%);
     padding-right: 30%;
     box-sizing: border-box;
-    color: #A4D4B4; /* Changement de la couleur pour correspondre au thème reptile */
+    color: ##FFFF00; /* Changement de la couleur pour correspondre au thème reptile */
     text-shadow: 0 5px 10px #0004;
 }
 
