--- a/Front-end/Les-clairieres.css
+++ b/Front-end/Les-clairieres.css
@@ -1,31 +1,44 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-body{
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap');
+
+body {
     margin: 0;
-    font-family: Poppins;
-    font-size: 15px;
-    font-size: bold;
+    font-family: Poppins, sans-serif;
     background-color: #000;
+    color: #eee;
 }
-a{
+
+a {
     text-decoration: none;
 }
-header{
-    
+
+header {
     max-width: 100%;
-    margin: auto;
-    height: 50px;
     display: flex;
     align-items: center;
+    justify-content: space-between;
+    padding: 0 20px;
+    height: 70px;
     position: fixed;
-    left: 350px;
+    top: 0;
+    left: 0;
+    right: 0;
     z-index: 100;
-
+    background-color: #000;
 }
-header a{
+
+header .logo img {
+    height: 60px;
+    display: block;
+}
+
+header .nav-links {
+    display: flex;
+    gap: 20px;
+}
+
+header .nav-links a, header .login a {
     color: #eee;
-    margin-right: 40px;
-
-
+    font-weight: 600;
 }
 
 /* Section principale de l'image */
