--- a/Front-end/inscription.css
+++ b/Front-end/inscription.css
@@ -1,11 +1,10 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap');
 
 body {
     margin: 0;
     font-family: Poppins, sans-serif;
-    font-size: 15px;
-    font-weight: bold;
     background-color: #000;
+    color: #eee;
 }
 
 a {
@@ -13,25 +12,34 @@ a {
 }
 
 header {
-    width: 100%; 
-    height: 50px; 
-    display: flex; 
-    align-items: center; 
-    justify-content: flex-start; 
-    position: fixed; 
-    top: 0; 
-    left: 0; 
-    z-index: 100; 
-    background-color: transparent; 
-    padding-left: 350px; 
+    max-width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0 20px;
+    height: 70px;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: 100;
+    background-color: #000;
 }
 
-header a {
-    color: #000; 
-    margin-right: 40px; 
-    font-weight: normal; 
+header .logo img {
+    height: 60px;
+    display: block;
 }
 
+header .nav-links {
+    display: flex;
+    gap: 20px;
+}
+
+header .nav-links a, header .login a {
+    color: #eee;
+    font-weight: 600;
+}
 
 .login-section {
     max-width: 400px;
