--- a/Front-end/services.css
+++ b/Front-end/services.css
@@ -1,11 +1,10 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap');
 
 body {
     margin: 0;
     font-family: Poppins, sans-serif;
-    font-size: 15px;
-    font-weight: bold;
-    background-color: #eee;
+    background-color: #000;
+    color: #eee;
 }
 
 a {
@@ -13,36 +12,44 @@ a {
 }
 
 header {
-    width: 100%; 
-    height: 50px; 
-    display: flex; 
-    align-items: center; 
-    justify-content: flex-start; 
-    position: fixed; 
-    top: 0; 
-    left: 0; 
-    z-index: 100; 
-    background-color: transparent; 
-    padding-left: 350px; 
+    max-width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0 20px;
+    height: 70px;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: 100;
+    background-color: #000;
 }
 
-header a {
-    color: #000; 
-    margin-right: 40px; 
-    font-weight: normal; 
+header .logo img {
+    height: 60px;
+    display: block;
 }
 
-/* Hero Section */
+header .nav-links {
+    display: flex;
+    gap: 20px;
+}
+
+header .nav-links a, header .login a {
+    color: #eee;
+    font-weight: 600;
+}
 .hero {
     margin-top: 50px;
-    background-image: url('public/hero-services.jpg');
+    background-image: url('public/enclos-plateau.jpg');
     background-size: cover;
     background-position: center;
     height: 300px;
     display: flex;
     align-items: center;
     justify-content: center;
-    color: #000;
+    color: #eee;
     text-shadow: 0 5px 10px rgba(0, 0, 0, 0.5);
 }
 
@@ -56,7 +63,7 @@ header a {
     margin: 40px auto;
     text-align: center;
     font-size: 1.2rem;
-    color: #555;
+    color: #eee;
 }
 
 
@@ -80,6 +87,7 @@ header a {
 .service-item:hover {
     transform: scale(1.05);
     box-shadow: 0 6px 10px rgba(0, 0, 0, 0.15);
+    background: #fa6c07;
 }
 
 .service-icon {
@@ -92,6 +100,7 @@ header a {
     font-size: 1.2rem;
     font-weight: bold;
     margin-bottom: 5px;
+    color: #000;
 }
 
 .service-description {
